--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 body {
     margin: auto;
-    width: 800px;
+    width: 1200px;
 }
 h1, h2 {
     text-align: center;
@@ -11,6 +11,10 @@ h1, h2 {
 .key {
     background-color: hotpink;
 }
+img {
+    max-width: 100%;
+}
+
 /* table styling ****************/
 
 .header-row {
